# qmce

./: .gitignore  CMakeLists.txt  common.cpp  common.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md  res.qrc
annotation/: annotationmanager.cpp  annotationmanager.h
canvas/: canvas.cpp  canvas.h
control/: movmanager.cpp  movmanager.h
inference/: PhaseDetectionSingleton.cpp  PhaseDetectionSingleton.h  SegmentationSingleton.cpp  SegmentationSingleton.h
res/script/: findpeak.py
widget/: SliderDialog.cpp  SliderDialog.h  customlistwidget.cpp  customlistwidget.h
